[package]
name = "dockerfile_generator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }


[[bin]]
name = "dockerfile_generator"
path = "src/main.rs"
